--- a/src/components/list/list.module.css
+++ b/src/components/list/list.module.css
@@ -1,8 +1,15 @@
 .container {
   padding: 0.2rem;
-  width: 50%;
   box-shadow: 3px 3px 10px 0px rgba(2, 1, 1, 0.7);
 }
+
+.grid {
+  width: 50%;
+}
+.list {
+  width: 100%;
+}
+
 .video {
   display: flex;
   align-items: center;
